--- a/seasonssk.css
+++ b/seasonssk.css
@@ -448,6 +448,7 @@ h3 {
 	border-radius: 10px;
 	padding: 10px 5px 10px 5px;
 	justify-content: space-between;
+	min-height: 173px;
 }
 #player_hand,
 #myhand h3 {
