--- a/seasonssk.css
+++ b/seasonssk.css
@@ -255,7 +255,10 @@ h3 {
 .gamestate_continueDraftChoice #season_dices_wrap,
 .gamestate_draftTwist #season_dices_wrap,
 .gamestate_chooseToken #season_dices_wrap,
-.gamestate_buildLibraryNew #season_dices_wrap {
+.gamestate_buildLibraryNew #season_dices_wrap ,
+.gamestate_buildLibrary3 #season_dices_wrap,
+.gamestate_buildLibrary2 #season_dices_wrap
+{
 	display: none;
 }
 
@@ -388,9 +391,9 @@ h3 {
 }
 .possibleCard {
 	border-radius: 15px;
-	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
-	-moz-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
-	-webkit-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
+	box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
+	-moz-box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
+	-webkit-box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
 	cursor: default;
 }
 
