--- a/seasonssk.css
+++ b/seasonssk.css
@@ -282,16 +282,17 @@ h3 {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 5px 5px 25px 5px;
+	padding: 5px;
 	position: relative;
 }
 .leftPlayerBoard .ssn-avatar {
-	width: 80px;
-	height: 80px;
+	width: 92px;
+	height: 92px;
 	border: 2px solid;
-	border-radius: 40px;
-	/*margin-top: -38px;*/
+	border-radius: 50px;
 	border-color: inherit;
+	position: absolute;
+	top: 10px;
 }
 
 .bonus_actions_used {
