--- a/seasonssk.css
+++ b/seasonssk.css
@@ -88,7 +88,7 @@ h3 {
 }
 
 .season_1 #season_dices_wrap {
-	border: 2px solid #008080;
+	background: url("img/convertSeason1.png");
 }
 .season_2 #season_dices_wrap {
 	border: 2px solid #61ac1b;
@@ -284,7 +284,7 @@ h3 {
 	justify-content: center;
 	padding: 5px;
 	position: relative;
-	gap:3px;
+	gap: 3px;
 }
 .leftPlayerBoard .ssn-avatar {
 	width: 92px;
@@ -325,7 +325,6 @@ h3 {
 	position: absolute;
 	top: 0px;
 }
-
 
 .counter {
 	color: white;
@@ -506,8 +505,6 @@ width: 20px;
 	border-radius: 13px;
 	/*background-color: rgba(38,18,9,0.15);*/
 	background: url("img/slotAvailable.png") no-repeat center;
-	
-
 }
 
 .empty-slot {
@@ -852,7 +849,7 @@ Responsive CSS Sprite created using: https://responsive-css.us/
 	border-radius: 18px;
 	width: 54px;
 	height: 54px;
-	box-sizing:border-box;
+	box-sizing: border-box;
 }
 
 .boardblock_seasons {
