--- a/seasonssk.css
+++ b/seasonssk.css
@@ -511,7 +511,21 @@ h3 {
 	background: url("img/slotAvailable.png") no-repeat center;
 }
 
-.empty-slot {
+.ssn-loc-full:after {
+	content: " ";
+	position: absolute;
+	z-index: 0;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	margin: -5px;
+	border-radius: 13px;
+	background-color: rgba(38,18,9,0.15);
+}
+
+
+.empty-slot{ /*,.ssn-loc-full:after */
 	box-shadow: inset 1px 1px 4px 2px #5c4223;
 }
 
