--- a/seasonssk.css
+++ b/seasonssk.css
@@ -457,6 +457,11 @@ h3 {
 .show-player-tableau {
 	height: 40px;
 	width: 25px;
+	grid-column: 2 !important;
+    z-index: 0;
+    justify-content: end;
+    align-items: end;
+    margin: auto;
 }
 
 .anchor-up {
