--- a/seasonssk.css
+++ b/seasonssk.css
@@ -458,10 +458,8 @@ h3 {
 	height: 40px;
 	width: 25px;
 	grid-column: 2 !important;
-    z-index: 0;
-    justify-content: end;
-    align-items: end;
-    margin: auto;
+	z-index: 1;
+	justify-self: end;
 }
 
 .anchor-up {
@@ -746,7 +744,7 @@ Responsive CSS Sprite created using: https://responsive-css.us/
 .player-board {
 	border-radius: 8px 0 0 0px;
 	overflow: hidden;
-	background-color: #f3f1f1;
+	background: #f3f1f1;
 }
 
 .player-board:not(#spectatorbox):before {
@@ -761,21 +759,34 @@ Responsive CSS Sprite created using: https://responsive-css.us/
 	border-width: 6px;
 }
 
+.player_board_content *:not(.ssn-avatar-wrapper){
+	z-index: 1;
+}
+
 .avatarBorder {
 	border-width: 6px;
 }
 
 .player-board .ssn-avatar {
-	display: inline-block;
-	background-repeat: no-repeat;
-	background-image: url(img/spritesresponsive.png);
 	width: 184px;
-	height: 184px;
-	background-position: 62.799% 77.2519%;
-	background-size: 544.681%;
-	border-style: solid;
-	border-radius: 50%;
-	margin: -30% 0 -61px -17%;
+    height: 184px;
+    background-color: #f3f1f1;
+    border-style: solid;
+    border-radius: 50%;
+    right: -30px;
+    position: absolute;
+    bottom: -84px;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+}
+
+.ssn-avatar-wrapper{
+	    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    z-index: 0;
+    background: #f3f1f1;
 }
 
 #new-year {
@@ -941,7 +952,9 @@ Responsive CSS Sprite created using: https://responsive-css.us/
 	border-radius: 8px;
 }
 
-.cardenergies .stockitem, #bonus_action_exchange_wrapper .stockitem, .energies .stockitem{
+.cardenergies .stockitem,
+#bonus_action_exchange_wrapper .stockitem,
+.energies .stockitem {
 	border-radius: 14px;
 }
 
@@ -966,8 +979,6 @@ Responsive CSS Sprite created using: https://responsive-css.us/
 
 a.choose_player {
 	display: none;
-	margin: 10px;
-	margin-top: 15px;
 }
 
 .bonusused {
