--- a/seasonssk.css
+++ b/seasonssk.css
@@ -39,16 +39,17 @@ h3 {
 /* main board */
 
 #board {
-	width: 400px;
-	height: 400px;
+	width: 340px;
+	height: 340px;
 	background-image: url("img/board.png");
 	float: left;
 	position: relative;
 	box-shadow: 0px 0px 10px 4px #e9b415;
 	border-radius: 210px;
+	background-size: contain;
 }
 #season_library_choice {
-	width: 410px;
+	width: 350px;
 	float: left;
 	position: relative;
 	left: -10px;
@@ -96,6 +97,10 @@ h3 {
 }
 
 .seasons_rightpanel {
+	margin-left: 350px;
+}
+
+.gamestate_buildLibraryNew .seasons_rightpanel {
 	margin-left: 410px;
 }
 
@@ -105,52 +110,52 @@ h3 {
 	position: absolute;
 }
 #monthplace_1 {
-	left: 230px;
-	top: 10px;
+	left: 195px;
+	top: 5px;
 }
 #monthplace_2 {
-	left: 315px;
-	top: 55px;
+	left: 264px;
+	top: 45px;
 }
 #monthplace_3 {
-	left: 360px;
-	top: 140px;
+	left: 305px;
+	top: 115px;
 }
 #monthplace_4 {
-	left: 360px;
-	top: 230px;
+	left: 304px;
+	top: 194px;
 }
 #monthplace_5 {
-	left: 315px;
-	top: 315px;
+	left: 263px;
+	top: 264px;
 }
 #monthplace_6 {
-	left: 230px;
-	top: 360px;
+	left: 196px;
+	top: 304px;
 }
 #monthplace_7 {
-	left: 140px;
-	top: 360px;
+	left: 112px;
+	top: 304px;
 }
 #monthplace_8 {
-	left: 55px;
-	top: 315px;
+	left: 45px;
+	top: 264px;
 }
 #monthplace_9 {
-	left: 10px;
-	top: 230px;
+	left: 5px;
+	top: 194px;
 }
 #monthplace_10 {
-	left: 10px;
-	top: 140px;
+	left: 5px;
+	top: 115px;
 }
 #monthplace_11 {
-	left: 55px;
-	top: 55px;
+	left: 45px;
+	top: 45px;
 }
 #monthplace_12 {
-	left: 140px;
-	top: 10px;
+	left: 112px;
+	top: 5px;
 }
 
 #current_month {
@@ -159,37 +164,37 @@ h3 {
 	background-image: url("img/icons.png");
 	position: absolute;
 	background-position: -0px -25px;
-	left: 185px;
-	top: 185px;
+	left: 195px;
+	top: 5px;
 }
 
 .yearplace {
 	position: absolute;
-	width: 36px;
-	height: 36px;
+	width: 26px;
+	height: 26px;
 }
 #yearplace_1 {
-	left: 149px;
-	top: 183px;
+	left: 128px;
+	top: 158px;
 }
 #yearplace_2 {
-	left: 181px;
-	top: 183px;
+	left: 156px;
+	top: 158px;
 }
 #yearplace_3 {
-	left: 214px;
-	top: 183px;
+	left: 184px;
+	top: 158px;
 }
 
 #current_year {
-	width: 36px;
-	height: 36px;
+	width: 26px;
+	height: 26px;
 	box-shadow: 0px 0px 7px 8px #e9b415;
 	border-radius: 20px;
 	position: absolute;
 	background-position: -30px -25px;
-	left: 149px;
-	top: 183px;
+	left: 128px;
+	top: 158px;
 }
 
 .bonus_actions {
