--- a/seasonssk.css
+++ b/seasonssk.css
@@ -1369,6 +1369,13 @@ a.choose_player {
 	height: 36px;
 }
 
+#generalactions .show-player-tableau{
+	height: 18px;
+	width: 11px;
+	display: inline-block;
+	margin-left: 5px;
+}
+
 .mobileOnlyPlayerName {
 	display: none;
 }
